# foundation

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: .dockerignore  docker-build-push.yml  docker-image-build-push.yml
demos/: 1) Stimulus.ipynb  2) Scan.ipynb  3) Recording.ipynb  4) Model Usage.ipynb  5) Model Export.ipynb
deploy/kubernetes/: fnn.yml  jupyter.yml  model.yml  model2.yml  recording.yml  scan.yml
deploy/scripts/: fnn.py  model.py  model2.py  recording.py  scan_recording.py
docker/: Dockerfile  docker-build.sh  docker-compose.yml  jupyter_lab_config.py
docker/legacy/: docker-compose.yml
foundation/bridges/: pipeline.py
foundation/dataset/: compute.py  dtype.py  insert.py  recording.py
foundation/exports/: microns.py
foundation/fnn/: architecture.py  cache.py  compute.py  compute_data.py  compute_dataset.py  compute_descent.py  compute_input.py  compute_instance.py  compute_model.py  compute_output.py  compute_scan.py  compute_state.py  compute_train.py  compute_visual.py  core.py  cortex.py  data.py  dataset.py  dataspec.py  descent.py  fill_scan.py  instance.py  model.py  modulation.py  network.py  perspective.py  progress.py  readout.py  scan.py  shared.py  temp.py  train.py  transfer.py  visual.py
foundation/found/: compute.py
foundation/function/: compute.py  compute_response.py  direction.py  individual.py  insert.py  response.py  scan.py
foundation/recording/: cache.py  compute.py  compute_tier.py  compute_trace.py  compute_trial.py  compute_visual.py  dtype.py  fill.py  fill_scan.py  (+14 more)
(+93 files in other folders)
