[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundation"
description = "Mouse Visual Cortex Foundation Model Pipeline"
authors = [
    { name = "Eric Y. Wang", email = "eric.wang2@bcm.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "numpy>=1.23.0,<1.24.0",
    "scipy==1.9.1",
    "pandas==2.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "Pillow==9.5.0",
    "av>=10.0.0,<11.0.0",
    "datajoint==0.12.9",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { attr = "foundation.version.__version__" }
